--- a/src/assets/frontpage/_frontpage-font.scss
+++ b/src/assets/frontpage/_frontpage-font.scss
@@ -159,6 +159,7 @@
   font-style: italic;
   font-display: swap;
 }
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 $f_FontAwesome: "FontAwesome";
 $f_NotoSans_Black: "NotoSans_Black";
 $f_NotoSans_BlackItalic: "NotoSans_BlackItalic";
@@ -178,3 +179,4 @@ $f_NotoSans_SemiBold: "NotoSans_SemiBold";
 $f_NotoSans_SemiBoldItalic: "NotoSans_SemiBoldItalic";
 $f_NotoSans_Thin: "NotoSans_Thin";
 $f_NotoSans_ThinItalic: "NotoSans_ThinItalic";
+$f_Roboto: "Roboto", sans-serif;
