--- a/src/assets/frontpage/_frontpage-global.scss
+++ b/src/assets/frontpage/_frontpage-global.scss
@@ -1,7 +1,9 @@
+.font-frontpage-global {
+  font-family: $f_NotoSans_Regular;
+  font-size: 16px;
+}
 .kairos-container {
   max-width: 1310px;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
